src/css/extensions/custom.css
.icofont-external-link {
  display: inline-block;
  margin-left: 1em;
}

.icofont-flag-alt-2,
.icofont-map-pins,
.icofont-paper,
.icofont-dashboard-web,
.icofont-worker,
.icofont-people,
.icofont-laboratory,
.icofont-foot-print {
  display: inline-block;
  margin-right: 1em;
}

@media screen and (min-width: 2400px) {
  html {
    font-size: var(--body-font-size--desktop);
  }

  .doc {
    align-self: center;
  }

  main {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

